# PDPTW

./: .gitignore  CMakeLists.txt  README.md  config.h.in  config.json  main.cc  sol_similarity_stats.cc
algo/lcs_srex/: crossover.cc  crossover.h  insert.cc  insert.h  lcs_dp.cc  lcs_dp.h  removal.cc  removal.h  route_subset.cc  route_subset.h  srex_sol.cc  srex_sol.h
analysis/: domain_overview.md  exact_solver_branch_price.md  exact_solver_callback.md  exact_solver_setpartitioning_twoindex.md  exact_solver_two_index_solve.md  main_overview.md  problem_analysis.cc  problem_analysis.h  solution_analysis.cc  solution_analysis.h
common/: constants.h
data/other_sol/: LR1_10_2_sol_80_49349.840000.txt  LR1_10_2_sol_80_49350.960000.txt  LR1_10_2_sol_80_49351.100000.txt  LR1_10_5_sol_58_63609.250000.txt  LR1_10_5_sol_58_63610.020000.txt  LR1_10_5_sol_58_63612.310000.txt  LR2_10_9_sol_12_54223.046128.txt  LR2_10_9_sol_12_54267.780000.txt  LR2_10_9_sol_12_54329.070000.txt  lr2_10_5.13_55197.1290.txt  lr2_10_5.13_55504.9072.txt
domain/api/: IVrpSolver.h
domain/model/: VrpProblem.h  VrpSolution.cpp  VrpSolution.h  VrpSolutionPool.h
domain/model/entity/: VrpConfig.h  VrpData.h  VrpNode.h  VrpRoute.cpp  VrpRoute.h
domain/solver/exact/: README.md  SetPartitioning.cpp  SetPartitioning.h  TwoIndChecker.cpp  TwoIndChecker.h  TwoIndexFormulation.cpp  TwoIndexFormulation.h  main2.cc
domain/solver/hgs/: main2.cc  ox.cpp  ox.h
domain/solver/memetic/: LargeNeighborhoodSearch.cpp  LargeNeighborhoodSearch.h  LocalSearch.cpp  LocalSearch.h  Memetic.cpp  Memetic.h  Perturb.cpp  Perturb.h
domain/solver/memetic/crossover/: CrossoverStrategy.h  EdgeAssemblyCrossover.cpp  EdgeAssemblyCrossover.h  LcsDp.cpp  LcsDp.h  RouteSubset.cpp  RouteSubset.h  SrexCrossover.cpp  SrexCrossover.h
domain/solver/memetic/insert/: Insert.cpp  Insert.h
domain/solver/memetic/removal/: Removal.cpp  Removal.h
domain/utils/: Utils.h
io/: pdptw_reader.cc  pdptw_reader.h  sol_reader.cc  sol_reader.h  sol_writer.cc  sol_writer.h  vrp_sol_writer.cc  vrp_sol_writer.h
model/: pdptw.h  solution.cc  solution.h
util/: convert_utils.cc  convert_utils.h  date_utils.h  distance_utils.h  random_utils.cc  random_utils.h  sol_similarity.cc  sol_similarity.h  string_utils.h
